[package]
name = "tcp-udp"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
chrono = "0.4"
bytes = "1"

# Encryption
aes-gcm = "0.10"
aes = "0.8" # For the AES cipher core
rand = { version = "0.8", features = ["getrandom"] }
hex = "0.4"
sha2 = "0.10" # For simple key derivation
typenum = "1.18.0"

[[bin]]
name = "client"
path = "src/client.rs"